client api functionality completed

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -60,7 +60,29 @@
         </form>
       </section>
 
-      <section class="edit-user"></section>
+      <section class="edit-user">
+        <form class="form" id="form-edit">
+          <label for="form-edit__email">Email</label>
+          <input type="text" id="form-edit__email" name="email" />
+          <label for="form-edit__fname">First Name</label>
+          <input type="text" id="form-edit__fname" name="first_name" />
+          <label for="form-edit__lname">Last Name</label>
+          <input type="text" id="form-edit__lname" name="last_name" />
+          <label for="form-edit__bday">Birthday</label>
+          <input type="text" id="form-edit__bday" name="birthday" />
+          <label for="form-edit__phone">Phone Number</label>
+          <input type="text" id="form-edit__phone" name="phone_number" />
+          <label for="form-edit__address">Address</label>
+          <input type="text" id="form-edit__address" name="address" />
+          <label for="form-edit__gender">Gender</label>
+          <select id="form-edit__gender" name="gender">
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+          </select>
+
+          <a href="#" class="btn" id="form-edit__btn">Save</a>
+        </form>
+      </section>
 
       <section class="user-info"></section>
 
