--- a/src/client/index.html
+++ b/src/client/index.html
@@ -91,16 +91,30 @@
         </form>
       </section>
 
-      <section class="user-info container"></section>
+      <section class="user-info container">
+        <form class="form" id="form-user-info">
+          <label for="form-user-info__email">Email</label>
+          <input type="text" id="form-user-info__email" name="email" disabled />
+          <label for="form-user-info__fname">First Name</label>
+          <input type="text" id="form-user-info__fname" name="first_name" disabled />
+          <label for="form-user-info__lname">Last Name</label>
+          <input type="text" id="form-user-info__lname" name="last_name" disabled />
+          <label for="form-user-info__bday">Birthday</label>
+          <input type="text" id="form-user-info__bday" name="birthday" disabled />
+          <label for="form-user-info__phone">Phone Number</label>
+          <input type="text" id="form-user-info__phone" name="phone_number" disabled />
+          <label for="form-user-info__address">Address</label>
+          <input type="text" id="form-user-info__address" name="address" disabled />
+          <label for="form-user-info__gender">Gender</label>
+          <input type="text" id="form-user-info__gender" name="gender" disabled />
+        </form>
+      </section>
 
       <section class="all-users container">
-        <div>
-          <p id="table-body-all-users"></p>
-        </div>
-        <!-- <table class="table table-striped">
+        <table class="table table-striped">
           <thead>
             <tr>
-              <th scope="col">#</th>
+              <th scope="col">ID</th>
               <th scope="col">Email</th>
               <th scope="col">First Name</th>
               <th scope="col">Last Name</th>
@@ -108,8 +122,8 @@
               <th scope="col">Gender</th>
             </tr>
           </thead>
-          <tbody id="table-body-all-users"></tbody>
-        </table> -->
+          <tbody id="all-users-table-body"></tbody>
+        </table>
       </section>
     </main>
   </body>
