client small btn color fix

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,12 +17,12 @@
   <body>
     <header class="header">
       <div class="navbar">
-        <a href="#" class="btn btn-primary" id="btn-login">login</a>
-        <a href="#" class="btn btn-primary" id="btn-register">sign up</a>
-        <a href="#" class="btn btn-primary" id="btn-logout">logout</a>
-        <a href="#" class="btn btn-primary" id="btn-editUser">edit user info</a>
-        <a href="#" class="btn btn-primary" id="btn-viewUserInfo">view user info</a>
-        <a href="#" class="btn btn-primary" id="btn-viewAllUsers">view registered users</a>
+        <a href="#" class="btn btn-dark" id="btn-login">login</a>
+        <a href="#" class="btn btn-dark" id="btn-register">sign up</a>
+        <a href="#" class="btn btn-dark" id="btn-logout">logout</a>
+        <a href="#" class="btn btn-dark" id="btn-editUser">edit user info</a>
+        <a href="#" class="btn btn-dark" id="btn-viewUserInfo">view user info</a>
+        <a href="#" class="btn btn-dark" id="btn-viewAllUsers">view registered users</a>
       </div>
     </header>
     <main class="main">
