--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HomePage</title>
+    <title>User Auth Webapp</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,103 +14,273 @@
 
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body>
-    <header class="header">
-      <div class="navbar">
-        <a href="#" class="btn btn-dark" id="btn-login">login</a>
-        <a href="#" class="btn btn-dark" id="btn-register">sign up</a>
-        <a href="#" class="btn btn-dark" id="btn-logout">logout</a>
-        <a href="#" class="btn btn-dark" id="btn-editUser">edit user info</a>
-        <a href="#" class="btn btn-dark" id="btn-viewUserInfo">view user info</a>
-        <a href="#" class="btn btn-dark" id="btn-viewAllUsers">view registered users</a>
+  <body class="text-center">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-2">
+      <div class="container-fluid">
+        <a class="navbar-brand" id="btn-nav-home" href="#">User Auth Webapp</a>
+        <div class="navar-menus">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" id="btn-nav-login" aria-current="page" href="#">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-nav-register" href="#">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-nav-logout" href="#">Logout</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-nav-user-info" href="#">User Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-nav-edit" href="#">Edit User</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="btn-nav-all-users" href="#">All Users</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>
+    </nav>
     <main class="main">
-      <div>
-        <h3 class="message-box" id="message-box"></h2>
+      <div class="position-fixed end-0 p-3" style="z-index: 11">
+        <div
+          class="toast align-items-center bg-primary"
+          id="live-toast"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+        >
+          <div class="d-flex">
+            <div class="toast-body text-white" id="toast-message"></div>
+            <button
+              type="button"
+              class="btn-close bg-white me-2 m-auto"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            ></button>
+          </div>
+        </div>
       </div>
 
-      <section class="register container">
-        <form class="form" id="form-register">
-          <label for="form-register__email">Email</label>
-          <input type="text" id="form-register__email" name="email" />
-          <label for="form-register__fname">First Name</label>
-          <input type="text" id="form-register__fname" name="first_name" />
-          <label for="form-register__lname">Last Name</label>
-          <input type="text" id="form-register__lname" name="last_name" />
-          <label for="form-register__password">Password</label>
-          <input type="password" id="form-register__password" name="password" />
-          <label for="form-register__bday">Birthday</label>
-          <input type="text" id="form-register__bday" name="birthday" />
-          <label for="form-register__phone">Phone Number</label>
-          <input type="text" id="form-register__phone" name="phone_number" />
-          <label for="form-register__address">Address</label>
-          <input type="text" id="form-register__address" name="address" />
-          <label for="form-register__gender">Gender</label>
-          <select id="form-register__gender" name="gender">
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-          </select>
-          <br />
-          <a href="#" class="btn btn-primary" id="form-register__btn">Register</a>
+      <section class="home section-active" id="section-home">
+        <h1 class="h1">Welcome!</h1>
+      </section>
+
+      <section class="register" id="section-register">
+        <h1 class="h3 mb-3 fw-normal">Register</h1>
+
+        <form id="form-register">
+          <div class="form-floating">
+            <input
+              type="email"
+              class="form-control"
+              id="form-register__email"
+              name="email"
+              placeholder="name@example.com"
+            />
+            <label for="form-register__email">Email address</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="password"
+              class="form-control"
+              id="form-register__password"
+              name="password"
+              placeholder="Password"
+            />
+            <label for="form-login__password">Password</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-register__fname"
+              name="first_name"
+              placeholder="First Name"
+            />
+            <label for="form-register__fname">First Name</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-register__lname"
+              name="last_name"
+              placeholder="Last Name"
+            />
+            <label for="form-register__lname">Last Name</label>
+          </div>
+          <div class="form-dropdown">
+            <label for="form-register__gender">Gender</label>
+            <select id="form-register__gender" name="gender">
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+            </select>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-register__bday"
+              name="birthday"
+              placeholder="1995-05-27"
+            />
+            <label for="form-register__bday">Birthday [example: 1995-05-27]</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-register__phone"
+              name="phone_number"
+              placeholder="02122232425"
+            />
+            <label for="form-register__phone">Phone Number</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-register__address"
+              name="address"
+              placeholder="Address"
+            />
+            <label for="form-register__address">Address</label>
+          </div>
+
+          <a class="w-100 btn btn-lg btn-success" id="form-register__btn">Register</a>
         </form>
       </section>
 
-      <section class="login container">
-        <form class="form" id="form-login">
-          <label for="form-login__email">Email</label>
-          <input type="text" id="form-login__email" name="email" />
-          <label for="form-login__password">Password</label>
-          <input type="password" id="form-login__password" name="password" />
-          <br />
-          <a href="#" class="btn btn-primary" id="form-login__btn">Login</a>
+      <section class="login" id="section-login">
+        <h1 class="h3 mb-3 fw-normal">Login</h1>
+
+        <form id="form-login">
+          <div class="form-floating">
+            <input
+              type="email"
+              class="form-control"
+              id="form-login__email"
+              name="email"
+              placeholder="name@example.com"
+            />
+            <label for="form-login__email">Email address</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="password"
+              class="form-control"
+              id="form-login__password"
+              name="password"
+              placeholder="Password"
+            />
+            <label for="form-login__password">Password</label>
+          </div>
+
+          <a class="w-100 btn btn-lg btn-primary" id="form-login__btn">Login</a>
         </form>
       </section>
 
-      <section class="edit-user container">
-        <form class="form" id="form-edit">
-          <label for="form-edit__email">Email</label>
-          <input type="text" id="form-edit__email" name="email" />
-          <label for="form-edit__fname">First Name</label>
-          <input type="text" id="form-edit__fname" name="first_name" />
-          <label for="form-edit__lname">Last Name</label>
-          <input type="text" id="form-edit__lname" name="last_name" />
-          <label for="form-edit__bday">Birthday</label>
-          <input type="text" id="form-edit__bday" name="birthday" />
-          <label for="form-edit__phone">Phone Number</label>
-          <input type="text" id="form-edit__phone" name="phone_number" />
-          <label for="form-edit__address">Address</label>
-          <input type="text" id="form-edit__address" name="address" />
-          <label for="form-edit__gender">Gender</label>
-          <select id="form-edit__gender" name="gender">
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-          </select>
-          <br />
-          <a href="#" class="btn btn-primary" id="form-edit__btn">Save</a>
+      <section class="edit-user" id="section-edit">
+        <h1 class="h3 mb-3 fw-normal">Edit Current User's Info</h1>
+
+        <form id="form-edit">
+          <div class="form-floating">
+            <input
+              type="email"
+              class="form-control"
+              id="form-edit__email"
+              name="email"
+              placeholder="name@example.com"
+            />
+            <label for="form-edit__email">Email address</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-edit__fname"
+              name="first_name"
+              placeholder="First Name"
+            />
+            <label for="form-edit__fname">First Name</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-edit__lname"
+              name="last_name"
+              placeholder="Last Name"
+            />
+            <label for="form-edit__lname">Last Name</label>
+          </div>
+          <div class="form-dropdown">
+            <label for="form-edit__gender">Gender</label>
+            <select id="form-edit__gender" name="gender">
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+            </select>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-edit__bday"
+              name="birthday"
+              placeholder="1995-05-27"
+            />
+            <label for="form-edit__bday">Birthday [example: 1995-05-27]</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-edit__phone"
+              name="phone_number"
+              placeholder="02122232425"
+            />
+            <label for="form-edit__phone">Phone Number</label>
+          </div>
+          <div class="form-floating">
+            <input
+              type="text"
+              class="form-control"
+              id="form-edit__address"
+              name="address"
+              placeholder="Address"
+            />
+            <label for="form-edit__address">Address</label>
+          </div>
+
+          <a class="w-100 btn btn-lg btn-success" id="form-edit__btn">Save</a>
         </form>
       </section>
 
-      <section class="user-info container">
-        <form class="form" id="form-user-info">
-          <label for="form-user-info__email">Email</label>
-          <input type="text" id="form-user-info__email" name="email" disabled />
-          <label for="form-user-info__fname">First Name</label>
-          <input type="text" id="form-user-info__fname" name="first_name" disabled />
-          <label for="form-user-info__lname">Last Name</label>
-          <input type="text" id="form-user-info__lname" name="last_name" disabled />
-          <label for="form-user-info__bday">Birthday</label>
-          <input type="text" id="form-user-info__bday" name="birthday" disabled />
-          <label for="form-user-info__phone">Phone Number</label>
-          <input type="text" id="form-user-info__phone" name="phone_number" disabled />
-          <label for="form-user-info__address">Address</label>
-          <input type="text" id="form-user-info__address" name="address" disabled />
-          <label for="form-user-info__gender">Gender</label>
-          <input type="text" id="form-user-info__gender" name="gender" disabled />
-        </form>
+      <section class="user-info" id="section-user-info">
+        <h1 class="h3 mb-3 fw-normal">Current User's Info</h1>
+
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Email</th>
+              <th scope="col">First Name</th>
+              <th scope="col">Last Name</th>
+              <th scope="col">Gender</th>
+              <th scope="col">Birthday</th>
+              <th scope="col">Phone</th>
+              <th scope="col">Address</th>
+            </tr>
+          </thead>
+          <tbody id="user-info-table-body"></tbody>
+        </table>
       </section>
 
-      <section class="all-users container">
+      <section class="all-users" id="section-all-users">
+        <h1 class="h3 mb-3 fw-normal">All Users</h1>
+
         <table class="table table-striped">
           <thead>
             <tr>
@@ -128,5 +298,10 @@
     </main>
   </body>
 
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
   <script src="./script.js"></script>
 </html>
